Fixed url in Cargo.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "torcher"
 description = "Torcher is a firewall generation tool written in Rust"
 license = "MIT"
-repository = "https://github.com/nullorigin/torcher"
+repository = "https://github.com/nullorigin/torcher.git"
 version = "0.1.0"
 edition = "2024"
 
